--- a/Extra.assignment-1.ipynb
+++ b/Extra.assignment-1.ipynb
@@ -111,7 +111,7 @@
    ],
    "source": [
     "#subraction\n",
-    "a=int(input())3\n",
+    "a=int(input())\n",
     "b=int(input())\n",
     "sub=a-b\n",
     "print(\"a=\",a)\n",
